--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,6 +1,7 @@
 .popup__image{
   margin: 0;
   padding: 0;
-  width:100%;
-  object-fit: initial;
+  max-width: 75vw;
+  max-height: 75vh;
+  object-fit: contain;
 }
